# c_NeuralNetwork

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  matrix.c  matrix.h  mnist.c  mnist.h
datasets/: digits.py  mnist.py
src/: layer.c  layer.h  loss.c  loss.h  main.c  matrix.c  matrix.h  mnist.c  mnist.h  optimizer.c  optimizer.h  simple_network.c  simple_network.h  tensor.c  tensor.h
